--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="/stylesheets/nice-select.css" />
         <link rel="stylesheet" href="/stylesheets/main.css" />
 
-        <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon" />
+        <link rel="shortcut icon" href="/images/icons/favicon.png" type="image/x-icon" />
 
         <title>{{title}}</title>
     </head>
