generate migrations, seeders; validate login and register form

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -6,16 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-        <link rel="stylesheet" href="/stylesheets/bootstrap.min.css" />
-        <link rel="stylesheet" href="/stylesheets/all.min.css" />
-        <link rel="stylesheet" href="/stylesheets/animate.css" />
-        <link rel="stylesheet" href="/stylesheets/flaticon.css" />
-        <link rel="stylesheet" href="/stylesheets/magnific-popup.css" />
-        <link rel="stylesheet" href="/stylesheets/odometer.css" />
-        <link rel="stylesheet" href="/stylesheets/owl.carousel.min.css" />
-        <link rel="stylesheet" href="/stylesheets/owl.theme.default.min.css" />
-        <link rel="stylesheet" href="/stylesheets/nice-select.css" />
-        <link rel="stylesheet" href="/stylesheets/main.css" />
+        {{>css-links}}
 
         <link rel="shortcut icon" href="/images/icons/favicon.png" type="image/x-icon" />
 
@@ -29,19 +20,7 @@
         {{{body}}}
         {{>footer}}
 
-        <script src="/javascripts/jquery-3.3.1.min.js"></script>
-        <script src="/javascripts/modernizr-3.6.0.min.js"></script>
-        <script src="/javascripts/plugins.js"></script>
-        <script src="/javascripts/bootstrap.min.js"></script>
-        <script src="/javascripts/isotope.pkgd.min.js"></script>
-        <script src="/javascripts/magnific-popup.min.js"></script>
-        <script src="/javascripts/owl.carousel.min.js"></script>
-        <script src="/javascripts/wow.min.js"></script>
-        <script src="/javascripts/countdown.min.js"></script>
-        <script src="/javascripts/odometer.min.js"></script>
-        <script src="/javascripts/viewport.jquery.js"></script>
-        <script src="/javascripts/nice-select.js"></script>
-        <script src="/javascripts/main.js"></script>
+        {{>js-links}}
     </body>
 
 </html>
