--- a/src/public/stylesheets/main.css
+++ b/src/public/stylesheets/main.css
@@ -8037,7 +8037,7 @@ input[type='submit'] {
     padding-left: 5px;
     margin-bottom: 0;
     margin-right: auto;
-    text-transform: capitalize;
+    text-transform: lowercase;
 }
 
 .account-area .account-form .form-group.checkgroup label a {
@@ -8050,14 +8050,14 @@ input[type='submit'] {
     }
 }
 
-.account-area .account-form .form-group.checkgroup .forget-pass {
+.account-area .account-form .form-group.checkgroup .forget {
     color: #6d7bba;
     text-transform: capitalize;
     font-size: 14px;
 }
 
 @media screen and (max-width: 425px) {
-    .account-area .account-form .form-group.checkgroup .forget-pass {
+    .account-area .account-form .form-group.checkgroup .forget {
         font-size: 12px;
     }
 }
@@ -8065,6 +8065,11 @@ input[type='submit'] {
 .account-area .option {
     text-align: center;
     margin-bottom: 28px;
+}
+
+.account-area .option.register {
+    text-align: center;
+    margin-bottom: 0;
 }
 
 .account-area .option a {
@@ -8120,6 +8125,14 @@ input[type='submit'] {
     .account-area {
         padding: 40px 15px;
     }
+}
+
+.account-area label.error {
+    font-size: 12px;
+    font-style: italic;
+    text-transform: lowercase !important;
+    color: #f1481f !important;
+    cursor: default;
 }
 
 /*Four-Not-Four-Section Starts Here*/
