--- a/src/views/pages/res-register.hbs
+++ b/src/views/pages/res-register.hbs
@@ -6,22 +6,22 @@
                     <span class="cate">wowo cinema</span>
                     <h2 class="title">đăng ký</h2>
                 </div>
-                <form id="register-form" class="account-form">
+                <form class="account-form">
                     <div class="form-group">
-                        <label for="email">email <span>*</span></label>
-                        <input type="text" placeholder="Nhập email" id="email" name="email" />
+                        <label for="email1">email<span>*</span></label>
+                        <input type="text" placeholder="Nhập email" id="email1" required />
                     </div>
                     <div class="form-group">
-                        <label for="pass1">mật khẩu <span>*</span></label>
-                        <input type="password" placeholder="Nhập mật khẩu" id="pass1" name="pass1" />
+                        <label for="pass1">mật khẩu<span>*</span></label>
+                        <input type="password" placeholder="Nhập mật khẩu" id="pass1" required />
                     </div>
                     <div class="form-group">
-                        <label for="pass2">xác nhận mật khẩu <span>*</span></label>
-                        <input type="password" placeholder="Nhập lại mật khẩu" id="pass2" name="pass2" />
+                        <label for="pass2">xác nhận mật khẩu<span>*</span></label>
+                        <input type="password" placeholder="Nhập lại mật khẩu" id="pass2" required />
                     </div>
                     <div class="form-group checkgroup">
-                        <input type="checkbox" id="agree" name="agree" checked disabled />
-                        <label for="agree">tôi đồng ý với
+                        <input type="checkbox" id="bal" required checked />
+                        <label for="bal">tôi đồng ý với
                             <a href="#">các điều khoản và chính sách bảo mật</a>
                     </div>
                     <div class="form-group text-center">
