complete the registration function

--- a/src/views/pages/login.hbs
+++ b/src/views/pages/login.hbs
@@ -3,7 +3,7 @@
         <div class="padding-top padding-bottom">
             <div class="account-area">
                 <div class="section-header-3">
-                    <span class="cate">wowo cinema</span>
+                    <span class="cate"><a href="/">wowo cinema</a> </span>
                     <h2 class="title">đăng nhập</h2>
                 </div>
                 <form id="login-form" class="account-form">
