--- a/src/views/partials/js-links.hbs
+++ b/src/views/partials/js-links.hbs
@@ -11,4 +11,5 @@
 <script src="/javascripts/viewport.jquery.js"></script>
 <script src="/javascripts/nice-select.js"></script>
 <script src="/javascripts/jquery.validate.min.js"></script>
+<script src="/javascripts/jquery.redirect.js"></script>
 <script src="/javascripts/main.js"></script>
