--- a/src/views/pages/register.hbs
+++ b/src/views/pages/register.hbs
@@ -3,13 +3,14 @@
         <div class="padding-top padding-bottom">
             <div class="account-area">
                 <div class="section-header-3">
-                    <span class="cate">wowo cinema</span>
+                    <span class="cate"><a href="/">wowo cinema</a> </span>
                     <h2 class="title">đăng ký</h2>
                 </div>
                 <form id="register-form" class="account-form">
                     <div class="form-group">
                         <label for="email">email <span>*</span></label>
                         <input type="text" placeholder="Nhập email" id="email" name="email" />
+                        <label for="email" id="email-error" class="error" style="display: none;"></label>
                     </div>
                     <div class="form-group">
                         <label for="pass1">mật khẩu <span>*</span></label>
@@ -28,8 +29,8 @@
                         <input type="submit" value="đăng ký" />
                     </div>
                 </form>
-                <div class="option register">
-                    Bạn đã có tài khoản?
+                <div class="option">
+                    bạn đã có tài khoản?
                     <a href="/login">đăng nhập</a>
                 </div>
             </div>
