--- a/src/views/pages/notification.hbs
+++ b/src/views/pages/notification.hbs
@@ -3,7 +3,7 @@
         <div class="padding-top padding-bottom">
             <div class="account-area">
                 <div class="section-header-3">
-                    <span class="cate"><a href="/">wowo cinema</a> </span>
+                    <span class="cate"><a href="/">{{appName}}</a> </span>
                 </div>
                 <div class="option">
                     {{notification}}
