--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -37,7 +37,7 @@
         <div class="footer-bottom">
             <div class="footer-bottom-area">
                 <div class="left">
-                    <p>Copyright © <a href="#">Wowo</a>. All Rights Reserved</p>
+                    <p>copyright © <a href="#">wowo</a>. all rights reserved</p>
                 </div>
                 <ul class="links">
                     <li>
