--- a/src/views/pages/home.hbs
+++ b/src/views/pages/home.hbs
@@ -22,7 +22,6 @@
                     <div class="search-ticket-header">
                         <h6 class="category">
                             chào mừng bạn đến với {{appName}}!
-                            <!DOCTYPE html>
                         </h6>
                         <h3 class="title">bạn đang tìm phim gì?</h3>
                     </div>
@@ -119,13 +118,13 @@
                                 <div class="col-sm-6 col-lg-3">
                                     <div class="movie-grid">
                                         <div class="movie-thumb c-thumb">
-                                            <a href="/detail.html">
+                                            <a href="//detail">
                                                 <img src="/images/movie/movie01.jpg" alt="movie" />
                                             </a>
                                         </div>
                                         <div class="movie-content bg-one">
                                             <h5 class="title m-0">
-                                                <a href="details.html">alone</a>
+                                                <a href="/detail">alone</a>
                                             </h5>
                                             <ul class="
                                                             movie-rating-percent
@@ -149,13 +148,13 @@
                                 <div class="col-sm-6 col-lg-3">
                                     <div class="movie-grid">
                                         <div class="movie-thumb c-thumb">
-                                            <a href="detail.html">
+                                            <a href="/detail">
                                                 <img src="/images/movie/movie02.jpg" alt="movie" />
                                             </a>
                                         </div>
                                         <div class="movie-content bg-one">
                                             <h5 class="title m-0">
-                                                <a href="details.html">mars</a>
+                                                <a href="/detail">mars</a>
                                             </h5>
                                             <ul class="
                                                             movie-rating-percent
@@ -179,13 +178,13 @@
                                 <div class="col-sm-6 col-lg-3">
                                     <div class="movie-grid">
                                         <div class="movie-thumb c-thumb">
-                                            <a href="detail.html">
+                                            <a href="/detail">
                                                 <img src="/images/movie/movie03.jpg" alt="movie" />
                                             </a>
                                         </div>
                                         <div class="movie-content bg-one">
                                             <h5 class="title m-0">
-                                                <a href="details.html">venus</a>
+                                                <a href="/detail">venus</a>
                                             </h5>
                                             <ul class="
                                                             movie-rating-percent
@@ -209,13 +208,13 @@
                                 <div class="col-sm-6 col-lg-3">
                                     <div class="movie-grid">
                                         <div class="movie-thumb c-thumb">
-                                            <a href="detail.html">
+                                            <a href="/detail">
                                                 <img src="/images/movie/movie04.jpg" alt="movie" />
                                             </a>
                                         </div>
                                         <div class="movie-content bg-one">
                                             <h5 class="title m-0">
-                                                <a href="details.html">on watch</a>
+                                                <a href="/detail">on watch</a>
                                             </h5>
                                             <ul class="
                                                             movie-rating-percent
@@ -239,13 +238,13 @@
                                 <div class="col-sm-6 col-lg-3">
                                     <div class="movie-grid">
                                         <div class="movie-thumb c-thumb">
-                                            <a href="detail.html">
+                                            <a href="/detail">
                                                 <img src="/images/movie/movie05.jpg" alt="movie" />
                                             </a>
                                         </div>
                                         <div class="movie-content bg-one">
                                             <h5 class="title m-0">
-                                                <a href="details.html">fury</a>
+                                                <a href="/detail">fury</a>
                                             </h5>
                                             <ul class="
                                                             movie-rating-percent
@@ -269,13 +268,13 @@
                                 <div class="col-sm-6 col-lg-3">
                                     <div class="movie-grid">
                                         <div class="movie-thumb c-thumb">
-                                            <a href="detail.html">
+                                            <a href="/detail">
                                                 <img src="/images/movie/movie06.jpg" alt="movie" />
                                             </a>
                                         </div>
                                         <div class="movie-content bg-one">
                                             <h5 class="title m-0">
-                                                <a href="details.html">trooper</a>
+                                                <a href="/detail">trooper</a>
                                             </h5>
                                             <ul class="
                                                             movie-rating-percent
@@ -299,13 +298,13 @@
                                 <div class="col-sm-6 col-lg-3">
                                     <div class="movie-grid">
                                         <div class="movie-thumb c-thumb">
-                                            <a href="detail.html">
+                                            <a href="/detail">
                                                 <img src="/images/movie/movie07.jpg" alt="movie" />
                                             </a>
                                         </div>
                                         <div class="movie-content bg-one">
                                             <h5 class="title m-0">
-                                                <a href="details.html">horror night</a>
+                                                <a href="/detail">horror night</a>
                                             </h5>
                                             <ul class="
                                                             movie-rating-percent
@@ -329,13 +328,13 @@
                                 <div class="col-sm-6 col-lg-3">
                                     <div class="movie-grid">
                                         <div class="movie-thumb c-thumb">
-                                            <a href="detail.html">
+                                            <a href="/detail">
                                                 <img src="/images/movie/movie08.jpg" alt="movie" />
                                             </a>
                                         </div>
                                         <div class="movie-content bg-one">
                                             <h5 class="title m-0">
-                                                <a href="details.html">the lost name</a>
+                                                <a href="/detail">the lost name</a>
                                             </h5>
                                             <ul class="
                                                             movie-rating-percent
@@ -359,13 +358,13 @@
                                 <div class="col-sm-6 col-lg-3">
                                     <div class="movie-grid">
                                         <div class="movie-thumb c-thumb">
-                                            <a href="detail.html">
+                                            <a href="/detail">
                                                 <img src="/images/movie/movie09.jpg" alt="movie" />
                                             </a>
                                         </div>
                                         <div class="movie-content bg-one">
                                             <h5 class="title m-0">
-                                                <a href="details.html">calm stedfast</a>
+                                                <a href="/detail">calm stedfast</a>
                                             </h5>
                                             <ul class="
                                                             movie-rating-percent
@@ -389,13 +388,13 @@
                                 <div class="col-sm-6 col-lg-3">
                                     <div class="movie-grid">
                                         <div class="movie-thumb c-thumb">
-                                            <a href="detail.html">
+                                            <a href="/detail">
                                                 <img src="/images/movie/movie10.jpg" alt="movie" />
                                             </a>
                                         </div>
                                         <div class="movie-content bg-one">
                                             <h5 class="title m-0">
-                                                <a href="details.html">criminal on
+                                                <a href="/detail">criminal on
                                                     party</a>
                                             </h5>
                                             <ul class="
@@ -420,13 +419,13 @@
                                 <div class="col-sm-6 col-lg-3">
                                     <div class="movie-grid">
                                         <div class="movie-thumb c-thumb">
-                                            <a href="detail.html">
+                                            <a href="/detail">
                                                 <img src="/images/movie/movie11.jpg" alt="movie" />
                                             </a>
                                         </div>
                                         <div class="movie-content bg-one">
                                             <h5 class="title m-0">
-                                                <a href="details.html">halloween party</a>
+                                                <a href="/detail">halloween party</a>
                                             </h5>
                                             <ul class="
                                                             movie-rating-percent
@@ -450,13 +449,13 @@
                                 <div class="col-sm-6 col-lg-3">
                                     <div class="movie-grid">
                                         <div class="movie-thumb c-thumb">
-                                            <a href="detail.html">
+                                            <a href="/detail">
                                                 <img src="/images/movie/movie12.jpg" alt="movie" />
                                             </a>
                                         </div>
                                         <div class="movie-content bg-one">
                                             <h5 class="title m-0">
-                                                <a href="details.html">the most wanted</a>
+                                                <a href="/detail">the most wanted</a>
                                             </h5>
                                             <ul class="
                                                             movie-rating-percent
