--- a/src/views/pages/login.hbs
+++ b/src/views/pages/login.hbs
@@ -32,12 +32,12 @@
                 <div class="or"><span>hoặc</span></div>
                 <ul class="social-icons">
                     <li>
-                        <a href="#">
+                        <a href="/login/facebook">
                             <i class="fab fa-facebook-f"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="/login/google">
                             <i class="fab fa-google"></i>
                         </a>
                     </li>
