--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="header-wrapper">
             <div class="logo">
-                <a href="index.html">
+                <a href="/">
                     <img src="/images/logo/logo.png" alt="logo" />
                 </a>
             </div>
@@ -11,19 +11,19 @@
                     <a href="/" class="active">mua vé</a>
                 </li>
                 <li>
-                    <a href="/cinema.html">hệ thống rạp phim</a>
+                    <a href="#">hệ thống rạp phim</a>
                     <ul class="submenu">
                         <li>
-                            <a href="/cinema.html">wowo cần thơ</a>
+                            <a href="/cinema">wowo cần thơ</a>
                         </li>
                         <li>
-                            <a href="/cinema.html">wowo hồ chí minh</a>
+                            <a href="/cinema">wowo hồ chí minh</a>
                         </li>
                         <li>
-                            <a href="/cinema.html">wowo đà nẵng</a>
+                            <a href="/cinema">wowo đà nẵng</a>
                         </li>
                         <li>
-                            <a href="/cinema.html">wowo hà nội</a>
+                            <a href="/cinema">wowo hà nội</a>
                         </li>
                     </ul>
                 </li>
