--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="footer-top">
             <div class="logo">
-                <a href="index-1.html">
+                <a href="/">
                     <img src="/images/footer/footer-logo.png" alt="footer" />
                 </a>
             </div>
