complete login with google account function

--- a/src/views/pages/login.hbs
+++ b/src/views/pages/login.hbs
@@ -17,7 +17,7 @@
                         <input type="password" placeholder="Nhập mật khẩu" id="pass" name="pass" />
                     </div>
                     <div class="form-group checkgroup">
-                        <input type="checkbox" id="remember" checked />
+                        <input type="checkbox" id="remember" />
                         <label for="remember">ghi nhớ mật khẩu</label>
                         <a href="#" class="forget">quên mật khẩu</a>
                     </div>
