--- a/src/views/pages/register.hbs
+++ b/src/views/pages/register.hbs
@@ -6,11 +6,11 @@
                     <span class="cate"><a href="/">{{appName}}</a> </span>
                     <h2 class="title">đăng ký</h2>
                 </div>
-                <form id="register-form" class="account-form" method="POST" action="/register">
+                <form id="register-form" class="account-form" method="POST">
                     <div class="form-group">
                         <label class="error">{{regErr}}</label>
                         <label for="email">email <span>*</span></label>
-                        <input type="text" placeholder="Nhập email" id="email" name="email" />
+                        <input type="text" placeholder="Nhập địa chỉ email" id="email" name="email" />
                     </div>
                     <div class="form-group">
                         <label for="pass1">mật khẩu <span>*</span></label>
