--- a/src/views/pages/login.hbs
+++ b/src/views/pages/login.hbs
@@ -6,11 +6,11 @@
                     <span class="cate"><a href="/">{{appName}}</a> </span>
                     <h2 class="title">đăng nhập</h2>
                 </div>
-                <form id="login-form" class="account-form" method="POST" action="/login">
+                <form id="login-form" class="account-form" method="POST">
                     <div class="form-group">
-                        <label class="error">{{authErr}}</label>
+                        <label class="error">{{logErr}}</label>
                         <label for="email">email <span>*</span></label>
-                        <input type="text" placeholder="Nhập email" id="email" name="email" />
+                        <input type="text" placeholder="Nhập địa chỉ email" id="email" name="email" />
                     </div>
                     <div class="form-group">
                         <label for="pass">mật khẩu <span>*</span></label>
@@ -19,7 +19,7 @@
                     <div class="form-group checkgroup">
                         <input type="checkbox" id="remember" />
                         <label for="remember">ghi nhớ mật khẩu</label>
-                        <a href="#" class="forget">quên mật khẩu</a>
+                        <a href="/recovery" class="forget">quên mật khẩu</a>
                     </div>
                     <div class="form-group text-center">
                         <input type="submit" value="đăng nhập" />
