--- a/src/views/pages/login.hbs
+++ b/src/views/pages/login.hbs
@@ -17,8 +17,8 @@
                         <input type="password" placeholder="Nhập mật khẩu" id="pass" name="pass" />
                     </div>
                     <div class="form-group checkgroup">
-                        <input type="checkbox" id="remember" />
-                        <label for="remember">ghi nhớ mật khẩu</label>
+                        <input type="checkbox" id="remember" name="remember" />
+                        <label for=" remember">ghi nhớ mật khẩu</label>
                         <a href="/recovery" class="forget">quên mật khẩu</a>
                     </div>
                     <div class="form-group text-center">
