--- a/src/views/pages/recovery.hbs
+++ b/src/views/pages/recovery.hbs
@@ -8,7 +8,7 @@
                 </div>
                 <form id="recovery-form" class="account-form" method="POST">
                     <div class="form-group">
-                        <label class="error">{{recErr}}</label>
+                        <label class="error" for="email">{{recErr}}</label>
                         <input type="text" placeholder="Nhập địa chỉ email" id="email" class="text-center"
                             name="email" />
                     </div>
