--- a/src/views/pages/register.hbs
+++ b/src/views/pages/register.hbs
@@ -8,7 +8,7 @@
                 </div>
                 <form id="register-form" class="account-form" method="POST">
                     <div class="form-group">
-                        <label class="error">{{regErr}}</label>
+                        <label class="error" for="email">{{regErr}}</label>
                         <label for="email">email <span>*</span></label>
                         <input type="text" placeholder="Nhập địa chỉ email" id="email" name="email" />
                     </div>
