--- a/src/views/pages/home.hbs
+++ b/src/views/pages/home.hbs
@@ -97,53 +97,68 @@
     <div class="container">
         <div class="row flex-wrap-reverse justify-content-center">
             <div class="col-lg-12 mb-50 mb-lg-0">
-                <div class="filter-tab tab">
-                    <div class="section-header-2">
-                        <div class="left">
-                            <h2 class="title">phim</h2>
-                            <p>
-                                chắc chắn bạn không bỏ lỡ những bộ phim
-                                ngày hôm nay !
-                            </p>
-                        </div>
-                        <ul class="tab-menu">
-                            <li class="active">tất cả</li>
-                            <li>mới công chiếu</li>
-                            <li>xem nhiều nhất</li>
-                        </ul>
+                <div class="tab">
+                    <div class="section-header-1">
+                        <h2 class="title">mới công chiếu</h2>
+                        <a class="view-all" href="/all?page=1">xem tất cả</a>
                     </div>
                     <div class="tab-area">
                         <div class="tab-item active">
-                            <div class="row mb-10 justify-content-center">
-                                {{#each movies}}
-                                    <div class="col-sm-6 col-lg-3">
-                                        <div class="movie-grid">
-                                            <div class="movie-thumb c-thumb">
-                                                <a href="/detail/{{this.dataValues.unsignedName}}">
-                                                    <img src="/images/movie/poster/poster-{{this.dataValues.poster}}.jpg"
-                                                        alt="poster" />
-                                                </a>
-                                            </div>
-                                            <div class="movie-content bg-one">
-                                                <h5 class="title m-0">
-                                                    <a
-                                                        href="/detail/{{this.dataValues.unsignedName}}">{{this.dataValues.name}}</a>
-                                                </h5>
+                            <div class="mb-50 justify-content-center">
+                                <div class="owl-carousel owl-theme tab-slider">
+                                    {{#each newMovies}}
+                                        <div class="item">
+                                            <div class="movie-grid">
+                                                <div class="movie-thumb c-thumb">
+                                                    <a href="/movie/{{this.dataValues.unsignedName}}">
+                                                        <img src="/images/movie/poster/poster-{{this.dataValues.poster}}.jpg"
+                                                            alt="poster" />
+                                                    </a>
+                                                </div>
+                                                <div class="movie-content bg-one">
+                                                    <h5 class="title m-0">
+                                                        <a
+                                                            href="/movie/{{this.dataValues.unsignedName}}">{{this.dataValues.name}}</a>
+                                                    </h5>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
-                                {{/each}}
+                                    {{/each}}
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="pagination-area text-center">
-                        <a href="#"><i class="fas fa-angle-double-left"></i><span>trước</span></a>
-                        <a href="#" class="active">1</a>
-                        <a href="#">2</a>
-                        <a href="#">3</a>
-                        <a href="#">4</a>
-                        <a href="#">5</a>
-                        <a href="#"><span>sau</span><i class="fas fa-angle-double-right"></i></a>
+                </div>
+                <div class="tab">
+                    <div class="section-header-1">
+                        <h2 class="title">xem nhiều nhất</h2>
+                        <a class="view-all" href="/all?page=1">xem tất cả</a>
+                    </div>
+                    <div class="tab-area">
+                        <div class="tab-item active">
+                            <div class="mb-10 justify-content-center">
+                                <div class="owl-carousel owl-theme tab-slider">
+                                    {{#each popMovies}}
+                                        <div class="item">
+                                            <div class="movie-grid">
+                                                <div class="movie-thumb c-thumb">
+                                                    <a href="/movie/{{this.dataValues.unsignedName}}">
+                                                        <img src="/images/movie/poster/poster-{{this.dataValues.poster}}.jpg"
+                                                            alt="poster" />
+                                                    </a>
+                                                </div>
+                                                <div class="movie-content bg-one">
+                                                    <h5 class="title m-0">
+                                                        <a
+                                                            href="/movie/{{this.dataValues.unsignedName}}">{{this.dataValues.name}}</a>
+                                                    </h5>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    {{/each}}
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
